--- a/cheapeats/protein.html
+++ b/cheapeats/protein.html
@@ -71,7 +71,7 @@
    <section>
        <a href="proteinburrito.html">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="madimg/mexikansk.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>BURRITO MED KYLLING</h1>
@@ -83,7 +83,7 @@
    <section>
         <a href="omelette.html">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="proteinimg/omelette.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>OMELETTE MED SKINKE</h1>
@@ -95,7 +95,7 @@
    <section>
         <a href="proteinpandekager.html">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="proteinimg/pandekager.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>PROTEINPANDEKAGER M. HAVRE OG BANAN</h1>
@@ -117,7 +117,7 @@
    <section>
        <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="proteinimg/grill.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>VEGANSK</h1>
@@ -129,7 +129,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="proteinimg/karryris.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>SUND FASTFOOD</h1>
@@ -140,7 +140,7 @@
    <section>
         <a href="#">
 
-            <img src="" alt="Her skal være et billede">
+            <img src="proteinimg/kyllingrisoggulerødder.jpg" alt="Her skal være et billede">
 
             <div class="skriftkasse">
                 <h1>SUNDE SØDE SNACKS</h1>
@@ -158,7 +158,7 @@
     <section>
         <a href="#">
  
-             <img src="" alt="Her skal være et billede">
+             <img src="proteinimg/sesamekylling.jpg" alt="Her skal være et billede">
  
              <div class="skriftkasse">
                  <h1>VEGANSK</h1>
@@ -170,7 +170,7 @@
     <section>
          <a href="#">
  
-             <img src="" alt="Her skal være et billede">
+             <img src="proteinimg/Tacos.jpg" alt="Her skal være et billede">
  
              <div class="skriftkasse">
                  <h1>SUND FASTFOOD</h1>
@@ -182,7 +182,7 @@
     <section>
          <a href="#">
  
-             <img src="" alt="Her skal være et billede">
+             <img src="proteinimg/tofumbroccoli.jpg" alt="Her skal være et billede">
  
              <div class="skriftkasse">
                  <h1>SUNDE SØDE SNACKS</h1>
