--- a/cheapeats/protein.html
+++ b/cheapeats/protein.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mere Protein</title>
+    <title>Spis mere protein-proteinholding mad, træning opskrifter</title>
     <link rel="stylesheet" href="undersidestyle.css"/>
-    <link rel="stylesheet" href="ekstraunderside_style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200&display=swap" rel="stylesheet">
@@ -70,7 +69,7 @@
    <section>
        <a href="proteinburrito.html">
 
-            <img src="madimg/mexikansk.jpg" alt="Her skal være et billede">
+            <img src="madimg/mexikansk.jpg" alt="proteinholdig mexikansk burrito">
 
             <div class="skriftkasse">
                 <h1>BURRITO MED KYLLING</h1>
@@ -82,7 +81,7 @@
    <section>
         <a href="omelette.html">
 
-            <img src="proteinimg/omelette.jpg" alt="Her skal være et billede">
+            <img src="proteinimg/omelette.jpg" alt=" proteinholdig omelette">
 
             <div class="skriftkasse">
                 <h1>OMELETTE MED SKINKE</h1>
@@ -94,7 +93,7 @@
    <section>
         <a href="proteinpandekager.html">
 
-            <img src="proteinimg/pandekager.jpg" alt="Her skal være et billede">
+            <img src="proteinimg/pandekager.jpg" alt="sunde proteinholdige bananpandekager">
 
             <div class="skriftkasse">
                 <h1>PROTEINPANDEKAGER M. HAVRE OG BANAN</h1>
@@ -116,10 +115,10 @@
    <section>
        <a href="#">
 
-            <img src="proteinimg/grill.jpg" alt="Her skal være et billede">
+            <img src="proteinimg/grill.jpg" alt="grillet kebab med grøntsager">
 
             <div class="skriftkasse">
-                <h1>VEGANSK</h1>
+                <h1>GRILLET KEBAB</h1>
             </div>
        </a>
 
@@ -128,10 +127,10 @@
    <section>
         <a href="#">
 
-            <img src="proteinimg/karryris.jpg" alt="Her skal være et billede">
+            <img src="proteinimg/karryris.jpg" alt="nem proteinholdig risret">
 
             <div class="skriftkasse">
-                <h1>SUND FASTFOOD</h1>
+                <h1>RISRET MED KYLLING OG KARRY</h1>
             </div>
         </a>
    </section>
@@ -139,10 +138,10 @@
    <section>
         <a href="#">
 
-            <img src="proteinimg/kyllingrisoggulerødder.jpg" alt="Her skal være et billede">
+            <img src="proteinimg/kyllingrisoggulerødder.jpg" alt=" Sunde stegte ris ">
 
             <div class="skriftkasse">
-                <h1>SUNDE SØDE SNACKS</h1>
+                <h1>KYLLING MED STEGTE RIS OG GRØNTSAGER</h1>
                
             </div>
        </a>
@@ -157,10 +156,10 @@
     <section>
         <a href="#">
  
-             <img src="proteinimg/sesamekylling.jpg" alt="Her skal være et billede">
+             <img src="proteinimg/sesamekylling.jpg" alt="sesamkylling med proteiner og grøntsager">
  
              <div class="skriftkasse">
-                 <h1>VEGANSK</h1>
+                 <h1>SESAM KYLLING</h1>
              </div>
         </a>
  
@@ -169,10 +168,10 @@
     <section>
          <a href="#">
  
-             <img src="proteinimg/Tacos.jpg" alt="Her skal være et billede">
+             <img src="proteinimg/Tacos.jpg" alt="tacos med revet oksekød">
  
              <div class="skriftkasse">
-                 <h1>SUND FASTFOOD</h1>
+                 <h1>FULDKORNS TACOS</h1>
 
              </div>
          </a>
@@ -181,10 +180,10 @@
     <section>
          <a href="#">
  
-             <img src="proteinimg/tofumbroccoli.jpg" alt="Her skal være et billede">
+             <img src="proteinimg/tofumbroccoli.jpg" alt="Vegansk protein opskrift">
  
              <div class="skriftkasse">
-                 <h1>SUNDE SØDE SNACKS</h1>
+                 <h1>TOFU MED BROCCOLI</h1>
              </div>
         </a>
     </section>
