--- a/cheapeats/protein.html
+++ b/cheapeats/protein.html
@@ -195,7 +195,7 @@
 
 <!--FOOTER-->
 <footer>
-   <a href="#">Sociale medier</a>
+   <a href="socialemedier.html">Sociale medier</a>
    <a href="#">App</a>
    <a href="#">Om os</a>
    <a href="#">Kontakt os</a>
